k8s/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy

spec:
  selector:
    matchLabels:
      app: frontend-kube

  template:
    metadata:
      labels:
        app: frontend-kube

    spec:
      containers:
      - name: frontend-container
        image: astraze/my_local_diary_front:31
        imagePullPolicy: Always
        ports:
        - containerPort: 80
